--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Blog</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="dist/build/css/build.css?v002" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
