--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
             </div>
-            <span class="header-credits">credits © <a href="http://teaandacamera.com" rel="nofollow">Paula Vermeulen</a></span>
+            <span class="header-credits">credits &copy; <a href="http://teaandacamera.com" rel="nofollow">Paula Vermeulen</a></span>
         </header>
     </script>
 
