Change more style Change home title

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="site-heading">
                             <h1>
                                 <% if(typeof title == "undefined"){ %>
-                                    <%= "Home" %>
+                                    <%= "Albert Ramos" %>
                                 <% } else { %>
                                     <%= title %>
                                 <% } %>
