--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Blog | Albert Ramos</title>
-    <meta name="description" content="Blog acerca de Backbone, Marionette, Laravel y desarrollo web. Es hora de contribuir con mi pequeña parte.">
+    <meta name="description" content="Blog acerca de Backbone, Marionette, Laravel y desarrollo web. Es hora de contribuir con mi peque&ntilde;a parte.">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <link href="dist/build/css/build.css?v002" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
